text alignment fixes

--- a/index.css
+++ b/index.css
@@ -23,10 +23,9 @@ h2{
   margin: 0px !important;
 }
 p{
-  text-align: justify;
 }
 iframe{
-  height: 100%;
+  height: 250px;
 }
 /* page structure */
 @media only screen and (max-device-width : 640px) {
@@ -56,9 +55,8 @@ iframe{
     grid-row: 2 !important;
     grid-column: 1 !important;
   }
-  .radioGrid{
-    grid-template-columns: auto !important;
-    grid-template-rows: auto auto repeat(5,minmax(32px,auto) auto auto auto) !important;
+  .logo{
+    width: 40px !important;
   }
 }
 #bodyGrid{
@@ -117,14 +115,14 @@ iframe{
 }
 .radioGrid{
   display: grid;
-  grid-template-columns: 30% auto;
-  grid-template-rows: auto auto repeat(6,minmax(32px,auto) minmax(200px,auto) auto);
+  grid-template-columns: 250px auto;
+  grid-template-rows: auto auto minmax(32px,auto) minmax(200px,auto) auto minmax(32px,auto) repeat(3,minmax(200px,auto)) auto repeat(3,minmax(32px,auto) minmax(200px,auto) auto);
   grid-gap: 20px;
 }
 .soundGrid{
   display: grid;
-  grid-template-columns: 30% auto;
-  grid-template-rows: auto auto auto auto repeat(2,minmax(32px,auto) minmax(200px,auto) auto);
+  grid-template-columns: 250px auto;
+  grid-template-rows: auto auto auto auto repeat(3,minmax(32px,auto) minmax(200px,auto) auto);
   grid-gap: 20px;
 }
 .span2{
@@ -153,6 +151,9 @@ img{
 img:hover{
 
 }
+.floatPic{
+  float: left;
+}
 .landscape{
   grid-column: span 2;
 }
@@ -162,6 +163,10 @@ img:hover{
   margin-top: 5px;
 }
 .picContainer{
+}
+.center{
   text-align: center;
-  margin: 20px;
+}
+.justify{
+  text-align: justify;
 }
